--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                     </li>
                     {% endif %}
 
-                    <!-- add Weibo, Zhihu by wblearn, add target = "_blank" to <a> by wblearn -->
+                    <!-- add Weibo, Zhihu by King, add target = "_blank" to <a> by King -->
                     {% if site.zhihu_username %}
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
@@ -94,7 +94,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                          powered by <a href="http://wblearn.github.io/">wblearn</a> 
+                          powered by <a href="http://charlekinghy.github.io/">King</a> 
                     <!--<iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
@@ -187,7 +187,7 @@
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
 <script>
-    // dynamic User by wblearn
+    // dynamic User by King
     var _gaId = '{{ site.ga_track_id }}';
     var _gaDomain = '{{ site.ga_domain }}';
 
